# whipscribe-mcp

./: .dxtignore  .gitignore  CHANGELOG.md  LICENSE  README.md  manifest.json  pyproject.toml  server.py
.github/workflows/: ci.yml  publish.yml
src/whipscribe_mcp/: __init__.py  __main__.py  cache.py  client.py  errors.py  server.py  telemetry.py  tools.py
tests/: conftest.py  test_cache.py  test_client.py  test_errors.py  test_telemetry.py  test_tools.py
