[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whipscribe-mcp"
version = "0.1.2"
description = "MCP server for Whipscribe transcription. Beta service — endpoints and quotas may change; not suitable for production."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
    {name = "Neugence Technology Pvt. Ltd.", email = "contact@neugence.ai"},
]
maintainers = [
    {name = "Neugence Technology Pvt. Ltd.", email = "contact@neugence.ai"},
]
keywords = [
    "mcp",
    "model-context-protocol",
    "transcription",
    "whipscribe",
    "audio",
    "video",
    "speech-to-text",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "structlog>=24.1.0",
    "pydantic>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
whipscribe-mcp = "whipscribe_mcp.__main__:main"

[project.urls]
Homepage = "https://whipscribe.com"
Documentation = "https://whipscribe.com/docs/api"
Repository = "https://github.com/neugence/whipscribe-mcp"
Issues = "https://github.com/neugence/whipscribe-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/whipscribe_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "src/whipscribe_mcp",
    "README.md",
    "LICENSE",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]

[tool.mypy]
strict = true
python_version = "3.10"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
